fix: layout shift when scrollbar appears

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,6 +15,10 @@
   --amount-frac-color: #938dac;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 html,
 body {
   font-size: 16px;
